--- a/numpy.mkd
+++ b/numpy.mkd
@@ -62,3 +62,35 @@
 3.  内存结构:
 <img src="./numpy_memory_struct.png" length="800" width="800"/>
 
+####ufunc运算
+    ufunc即universal function的缩写,是对数组内每个元素进行操作的函数;
+1.  sin(),结果是新建了一个数组保存,可以用out指定计算结果保存的位置;因为是c语言级别的循环，所以比math.sin快很多.item()获得数组元素，并已经转换成了python标准类型了。
+2.  四则运算:numpy为数组定义了各种数学运算操作
+    + - * / //(对返回的整数取整) -x ** % 
+3.  比较和布尔运算
+    == >等对两个数组进行运算，返回布尔数组;数组的布尔运算函数名都以logic_开头，如logic_and等.
+4.  自定义ufunc函数
+    可以用frompyfunc()将一个计算单个元素的函数转换成ufunc函数。就可以方便地用所产生的ufunc函数对数组进行计算了。
+    `frompyfunc(func,nin,nout)`,其中`nin`是`func`输入参数的个数，`nout`是返回值个数,例子如下，其中x为数组:
+    ```python
+	triangle_ufunc1 = np.frompyfunc(triangle_wave, 4, 1)
+	y2 = triangle_ufunc1(x, 0.6, 0.4, 1.0)
+    ```
+    vectorize()也可以实现类似功能，但它可以通过otypes指定返回数组的元素类型
+5. 广播:
+	当使用ufunc函数对两个数组进行计算时，ufunc函数会对这两个数组的对应元素进行计算，因此它要求这两个数组的形状相同。如果形状不同，会进行如下的广播(broadcasting)处理：
+	* 让所有输入数组都向其中维数最多的数组看齐，shape属性中不足的部分都通过在前面加1补齐。
+	* 输出数组的shape属性是输入数组的shape属性的各个轴上的最大值。
+	* 如果输入数组的某个轴的长度为1或与输出数组的对应轴的长度相同时，这个数组能够用来计算，否则出错。
+	* 当输入数组的某个轴的长度为1时，沿着此轴运算时都用此轴上的第一组值。
+```python
+	a = np.arange(0,60,10).reshape(-1,1)
+	b = np.arange(0,5)
+	c = a + b
+	#c.shape = (6,5)
+```
+
+6. 能快速产生能进行广播运算数组的ogrid对象;类似的还有ix_()
+
+####多维数组下标存取
+1. 如果下标元组的所有元素都是切片和整数，那么用它作为下标得到的是原始数组的一个视图。
